# just-another-vpn-server

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
configs/: client.ovpn  server.toml
docker/: Dockerfile.client  Dockerfile.server  client-start.sh  docker-compose.yml  server.toml  test.sh
scripts/: add-client.sh  generate-certs.sh  generate-psk.sh  make-client.sh  server-install.sh  stability-test.sh  upgrade.sh
src/: config.rs  control_channel.rs  crypto.rs  main.rs  nat.rs  prf.rs  protocol.rs  replay.rs  server.rs  session.rs  static_key.rs  tls.rs  tls_auth.rs  tls_crypt.rs  transport.rs  tun_dev.rs
