[package]
name = "just-another-vpn-server"
version = "0.1.6"
edition = "2024"
description = "An OpenVPN-compatible VPN server in Rust"
license = "MIT"

[[bin]]
name = "javs"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }

# TLS for the OpenVPN control channel
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
rustls-pki-types = "1"
rustls-webpki = "0.102"
# Parses the peer cert after the rustls handshake so we can log / route by CN.
x509-parser = "0.16"

# Data channel AEAD
aes-gcm = "0.10"
# tls-crypt: raw AES + counter-mode for the encrypted control channel
aes = "0.8"
ctr = "0.9"

# tls-auth uses HMAC-SHA256; the classic OpenVPN PRF (used when tls-ekm
# isn't negotiated) needs MD5 + SHA1 under HMAC.
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"

# TUN device
tun = { version = "0.7", features = ["async"] }

# Networking helpers
bytes = "1"

# Config / logging / errors
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"

# Misc
rand = "0.8"
hex = "0.4"
dashmap = "5"
parking_lot = "0.12"
bitflags = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
